innovation page - replace video poster and fix spacing

--- a/client/js/common/directives/finalnavbar/finalnavbar.scss
+++ b/client/js/common/directives/finalnavbar/finalnavbar.scss
@@ -625,7 +625,7 @@ a.up-arrow-about:after {
     background-image: url("search1.png");
     background-repeat: no-repeat;
     background-size: 15px;
-    background-position: 50% 50%;
+    background-position: 50% 65%;
   }
 
   .close-button {
