--- a/client/js/innovation/innovation.scss
+++ b/client/js/innovation/innovation.scss
@@ -442,8 +442,6 @@ a.video-button1 {
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-
-
 	.inn-animation, .gif, .mask {
 	  width: 752px;
 	}
@@ -467,7 +465,7 @@ a.video-button1 {
 	}
 
   .mask {
-    min-height: 570px;
+    min-height: 500px;
   }
 
 	.play-buttons1 {
@@ -655,4 +653,24 @@ a.video-button1 {
     font-size: 22px;
   }
 
+}
+
+@media screen and (max-width: 580px) {
+	.mask {
+		min-height: 350px;
+	}
+
+	.mask video {
+		min-height: 350px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.mask {
+		min-height: 270px;
+	}
+
+	.mask video {
+		min-height: 270px;
+	}
 }
